<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySocialNetwork</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_message">Welecome to our Social Network!</string>
    <string name="signup_button">SignUp</string>
    <string name="login_button">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>

</resources>
